--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "test": "find . -regex '.*/jobs/.*/test/.*.js' | xargs mocha"
   },
   "dependencies": {
-    "atlasboard": "^1.1.3",
-    "node-rest-client": "^1.8.0"
+    "atlasboard": "^1.1.3"
   }
 }
